static/css/style.css
/* General styles */
html,
body {
    font-family: "Montserrat", sans-serif;
    height: 100vh;
    margin: 0;
    padding: 0;
}

h1,
h2, h3 {
    font-family: "Poiret", cursive;
    margin-top: 5rem;
    margin-bottom: 3rem;
}

.heading {
    color:#333 !important;
}

/* Header Background */
header {
    height: 10vh;
    color: #ddd;
    padding: 20px 10px;
}

/* Navbar */
.menu-text {
    display: none;
}

nav.navbar {
    padding: 8px;
}

.navbar {
    background-color: #7c7575 !important;
    color: #ddd !important;
}

.navbar .nav-link {
    display: flex;
    align-items: center;
    padding: 5px 8px !important;
    margin-left: 1rem;
}

.navbar-nav .nav-link, .dropdown-menu a {
    color: #333  !important;
}

.navbar-nav .nav-link:hover, .dropdown-menu a:hover {
    color: rgb(85, 63, 70) !important;
}

.navbar-nav .nav-item .nav-link.dropdown-toggle:hover,
.navbar-nav .nav-item .nav-link.dropdown-toggle:focus,
.navbar-nav .nav-item .nav-link.dropdown-toggle.active {
    background-color: #f8f9fa !important;
    color: #333 !important;
    border-radius: 5px;
}

.navbar .dropdown-toggle {
    color: #ddd !important;
}

.navbar-toggler {
    position: relative;
    z-index: 1050;
    display: flex;
    align-items: center;
    background: none;
    border: none;
}

.navbar-collapse {
    position: absolute;
    top: 100%;
    left: 0;
    width: 100%;
    background-color: #7c7575 !important;
    z-index: 1000;
}

/* Dropdown Menu Styles */
.dropdown-menu {
    display: flex;
    background-color: #ddd!important;
    border: none;
    display: block;
    opacity: 0;
    transform: translateY(-10px);
    visibility: hidden;
    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
}

.dropdown-menu.show {
    min-width: fit-content !important;
    width: auto !important;
    font-size: 14px;
    opacity: 1;
    transform: translateY(0);
    visibility: visible;
}

a.dropdown-item {
    padding: 4px 12px;
}

/* Logo Mobile */
#logo-mobile {
    height: 3rem;
}

/* Font Awesome icons */
.fa-user, .fa-cart-shopping {
    color: #ddd !important;
    font-size: 1rem;
}

/* Language selector */
.flag-icon {
    height: 1rem;
    object-fit: cover;
    margin-right: 4px !important;
}


/* footer */
footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 2rem;
    min-height: 100px; 
    box-sizing: border-box;
}

footer i {
    text-decoration: none;
    font-size: 14px;
    color: #fff;
} 

/* Media Queries for screens from 576px */
@media (min-width: 576px) {

    .menu-text {
        display: inline !important;
        font-size: 1rem;
        font-weight: 600;
    }


    #logo-mobile {
        height: 5rem;
    }

    .fa-user, .fa-cart-shopping {
        font-size: 1.5rem;
    }

    .flag-icon {
        height: 1.5rem;
        object-fit: cover;
        margin-right: 4px !important;
    }
}

/* Media Queries for screens from 992px */
@media (min-width: 992px) {
    #logo-desktop {
        height: 5rem;
    }

    .fa-user, .fa-cart-shopping {
        font-size: 1.5rem;
        margin-right: 15px !important;
    }

    nav.navbar {
        padding: 8 16 8 16px;
    }

    .navbar .nav-link {
        padding: 10px 15px !important;
    }

    .navbar .nav-link i {
        margin-right: 8px !important;
    }

    #languageDropdown {
        padding: 10px !important;
    }

    .fa-user, .fa-cart-shopping {
        font-size: 1.5rem;
    }

    .flag-icon {
        height: 1.5rem;
    }
}

